--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install .
+  - pip install pytest pytest-cov coveralls pyyaml
 
 script:
   - pytest --cov=watchdog watchdog/tests
