--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,12 @@ install:
   - pip install .
   - pip install pytest pytest-cov coveralls pyyaml
 
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 script:
   - pytest --cov=watchdog watchdog/tests
-after_success:
+after_script:
   - coveralls
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
