--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ script:
   - pytest --cov=watchdog watchdog/tests
 after_script:
   - coveralls
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT --file .coverage
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT -t coverage.py -r CC_TEST_REPORTER_ID
