--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,6 @@ install:
   - pip install pytest pytest-cov coveralls pyyaml
 
 before_script:
-  - export CC_TEST_REPORTER_ID=c24876726317382f0dd10866fe2c954e6c344cba41fa12f8796a54a2ca5a9c87
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
@@ -18,4 +17,4 @@ script:
   - pytest --cov=watchdog watchdog/tests --cov-report xml
 after_script:
   - coveralls
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT -t coverage.py -r CC_TEST_REPORTER_ID
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT -t coverage.py
