--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install .
-  - pip install pytest pytest-cov
+  - pip install pytest pytest-cov hypothesis
 
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
