Organize Influx-related code in vigilant/tick and add vigilant-daemon entrypoint

--- a/vigilant/tick/kapacitor.conf
+++ b/vigilant/tick/kapacitor.conf
@@ -1,4 +1,5 @@
 hostname = "localhost"
+data_dir = "C:/.kapacitor"
 skip-config-overrides = false
 default-retention-policy = ""
 
@@ -6,7 +7,7 @@ default-retention-policy = ""
   persist-topics = true
 
 [http]
-  # bind-address = ":9092"     # set with environmental variable
+  bind-address = ":9092"     # set with environmental variable
   auth-enabled = false
   log-enabled = true
   write-tracing = false
@@ -19,9 +20,10 @@ default-retention-policy = ""
 
 [[influxdb]]
   enabled = true
+  batch-size = 1
   name = "localhost"
   default = false
-  # urls = []       # set with environmental variable
+  urls = ["http://localhost:8086"]       # set with environmental variable
   username = ""
   password = ""
   insecure-skip-verify = false
