--- a/vigilant/tick/telegraf.conf
+++ b/vigilant/tick/telegraf.conf
@@ -23,12 +23,12 @@
   ## Telegraf will send metrics to outputs in batches of at most
   ## metric_batch_size metrics.
   ## This controls the size of writes that Telegraf sends to output plugins.
-  metric_batch_size = 1000
+  metric_batch_size = 1
 
   ## Maximum number of unwritten metrics per output.  Increasing this value
   ## allows for longer periods of output downtime without dropping metrics at the
   ## cost of higher maximum memory usage.
-  metric_buffer_limit = 10000
+  metric_buffer_limit = 2
 
   ## Collection jitter is used to jitter the collection by a random amount.
   ## Each plugin will sleep for a random time within jitter before collecting.
@@ -38,7 +38,7 @@
 
   ## Default flushing interval for all outputs. Maximum flush_interval will be
   ## flush_interval + flush_jitter
-  flush_interval = "10s"
+  flush_interval = "1s"
   ## Jitter the flush interval by a random amount. This is primarily to avoid
   ## large write spikes for users running a large number of telegraf instances.
   ## ie, a jitter of 5s and interval 10s means flushes will happen every 10-15s
@@ -66,9 +66,9 @@
 
 # Configuration for sending metrics to InfluxDB
 [[outputs.influxdb]]
-  urls = ["${INFLUX_URL}"]
+  urls = ["${KAPACITOR_URL}"]
   database = "${INFLUX_DATABASE}"
-
+  retention_policy = "autogen"
 ###############################################################################
 #                            INPUT PLUGINS                                    #
 ###############################################################################
